--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@angular/platform-browser": "^18.0.0",
     "@angular/platform-browser-dynamic": "^18.0.0",
     "@angular/router": "^18.0.0",
+    "@tmcw/togeojson": "^5.8.1",
+    "@types/google.maps": "^3.55.11",
     "ace-builds": "^1.35.3",
     "ngx-ace-wrapper": "^17.0.0",
     "rxjs": "~7.8.0",
