--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/google.maps": "^3.55.11",
     "ace-builds": "^1.35.3",
     "ngx-ace-wrapper": "^17.0.0",
+    "primeicons": "^7.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
